<resources>
    <string name="app_name">Wallpaper Hub</string>

    <!-- For Navbar title -->
    <string name="nav_home">Home</string>
    <string name="nav_favourites">Favorites</string>
    <string name="nav_settings">Settings</string>

    <string name="login_successful">Login Successful</string>
    <string name="login_failed">Login Failed</string>
    <string name="logged_in_user">Users Name</string>
    <string name="not_signed_in">You have to sign in first</string>

    <string name="share_image">Share Image</string>
    <string name="image_placeholder">Image</string>
    <string name="download_image">Download Image</string>
    <string name="settings_image_placeholder">Image for unable to sign in</string>

    <string name="category_title">Category Title</string>

    <string name="home_fragment">Home fragment</string>
    <string name="email">user@email.com</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="image">Image</string>
    <string name="blog_description">Lorem Ipsum set amit</string>
    <string name="like">Like</string>
    <string name="image_title">Image Title</string>
</resources>
