<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment">

    <LinearLayout
        android:id="@+id/fsl_linLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <!-- Profile Image -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/fsl_ivUserLoggedIn"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:contentDescription="@string/settings_image_placeholder"
            android:src="@drawable/ic_tease" />

        <!-- User Name -->
        <TextView
            android:id="@+id/fsl_tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/logged_in_user"
            android:textSize="28sp"
            android:textStyle="bold" />

        <!-- Email -->
        <TextView
            android:id="@+id/fsl_tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/email"
            android:textSize="18sp" />

        <!-- Logout -->
        <TextView
            android:id="@+id/fsl_tvLogout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:drawableStart="@drawable/ic_logout"
            android:gravity="center"
            android:text="@string/logout"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>